# applications-vault

./: .gitignore  Makefile  README.html  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  capture.py  document.py  event.py  job.py  tag.py  vault.py
backend/app/routers/: analytics.py  backup.py  calendar.py  captures.py  documents.py  events.py  jobs.py  search.py  tags.py  vault.py
backend/app/schemas/: capture.py  document.py  event.py  job.py  search.py  tag.py  vault.py
backend/app/services/: backup_service.py  calendar_service.py  capture_service.py  document_service.py  match_service.py  pdf_service.py  search_service.py  vault_service.py
backend/app/utils/: filesystem.py  hashing.py  security.py
backend/tests/: conftest.py  test_backup.py  test_calendar.py  test_captures.py  test_documents.py  test_events.py  test_jobs.py  test_search.py  test_vault.py
extension/: build.sh  manifest.firefox.json  manifest.json
extension/src/: background.js  content.js
extension/src/popup/: popup.html  popup.js
extension/src/utils/: api.js
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/common/: Modal.tsx  StatusBadge.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/vault/: VaultSetup.tsx  VaultUnlock.tsx
frontend/src/pages/: Dashboard.tsx  JobDetailPage.tsx  JobListPage.tsx  SearchPage.tsx
frontend/src/store/: vaultStore.ts
frontend/src/types/: index.ts
